<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="10dp"/>

    <RelativeLayout
        android:id="@+id/rv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView">
    <LinearLayout
        android:id="@+id/linear1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginStart="40dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/id"
            android:textColor="#000"
            android:textSize="20sp"/>
        <EditText
            android:autofillHints="Id"
            android:layout_width="0dp"
            android:hint="@string/enter_id"
            android:textColorHint="#000"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_weight="1"/>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_below="@+id/rv1"
        android:id="@+id/rv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/linear2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginStart="40dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/password"
            android:textColor="#000"
            android:textSize="20sp"/>
        <EditText
            android:autofillHints="Id"
            android:layout_width="0dp"
            android:hint="@string/enter_password"
            android:inputType="numberPassword"
            android:textColorHint="#000"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_weight="1"/>
        </LinearLayout>
    </RelativeLayout>
    <Button
        android:id="@+id/button"
        android:layout_below="@+id/rv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:layout_marginTop="20dp"
        android:layout_centerInParent="true"/>
</RelativeLayout>